<resources>
    <string name="app_name" translatable="false">Mixit</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="label_google_sign_in" translatable="false">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_firebase_ui" translatable="false">FirebaseUI Auth</string>
    <string name="desc_firebase_ui" translatable="false">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token" translatable="false">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out" translatable="false">Signed Out</string>
    <string name="token_null" translatable="false">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup" translatable="false">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt" translatable="false">Firebase User: %s</string>
    <string name="firebase_user_management" translatable="false">Firebase User Management</string>
    <string name="google_status_fmt" translatable="false">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="passwordless_status_fmt" translatable="false">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text" translatable="false">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="firebaseui_status_fmt" translatable="false">Firebase User: %s</string>
    <string name="firebaseui_title_text" translatable="false">FirebaseUI Auth</string>
    <string name="id_fmt" translatable="false">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="facebook_app_id" translatable="false">424317441819524</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb424317441819524</string>
    <string name="action_register_email">Register with email</string>
    <string name="action_continue_facebook">Continue with Facebook</string>
    <string name="action_continue_google">Continue  with Google</string>
    <string name="action_skip">Skip</string>
    <string name="action_start">Start</string>
    <string name="action_txt_login">Sign in</string>
    <string name="txt_skip_walkthrough">Are you already part of our family?</string>
    <string name="txt_walkthrough1_title">Prepare the best cocktails</string>
    <string name="txt_walkthrough2_title">Create your own recipes</string>
    <string name="txt_walkthrough3_title">Reminders</string>
    <string name="txt_walkthrough4_title">Filter by liquors</string>
    <string name="txt_walkthrough1_description">Get to prepare the best cocktails with our recipes, you will be the sensation!</string>
    <string name="txt_walkthrough2_description">Create your own cocktails and store it in our system so you don\'t forget them!</string>
    <string name="txt_walkthrough3_description">Add reminders to the cocktails you want to prepare in the future</string>
    <string name="txt_walkthrough4_description_1">You only have a few ingredients and you don\'t know what to prepare?</string>
    <string name="txt_walkthrough4_description_2">Don\'t worry, we help you find the ideal cocktail!</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="prompt_email">Enter your email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_password">Enter a password</string>
    <string name="prompt_confirmed_password">Repeat password</string>
    <string name="txt_accept_register">By registering, you accept the <a href="/"> Terms of service and security policy </a></string>
    <string name="txt_start_session">Do you already have an account?</string>
    <string name="txt_start_anonymous">Continue without registering</string>
    <string name="txt_description">Description</string>
    <string name="txt_tutorial">Tutorial</string>
    <string name="txt_ingredients">Ingredients</string>
    <string name="txt_title">TITLE</string>
    <string name="action_search">Search</string>
    <string name="promp_name">Enter your full name</string>
    <string name="txt_create_account">Create account</string>
    <string name="txt_back">Return</string>
    <string name="txt_asking_account">Do you need an account?</string>
    <string name="txt_welcome_again">It\'s nice to have you back!</string>
    <string name="txt_successful_password_reset">We have sent you a link to reset your password, check your email</string>
    <string name="txt_error_password_reset">The email to reset the password was not sent, please try again later</string>
    <string name="txt_error_login">Failed to login</string>
    <string name="txt_successful_register">You have successfully registered!</string>
    <string name="txt_error_register">Registration failed, please try again later.</string>
    <string name="title_activity_terms_and_conditions">Terms and Conditions</string>
    <string name="prompt_description">Add a description</string>
    <string name="txt_select_ingredients_like">Select all the ingredients you like</string>
    <string name="prompt_title_cockatil">Enter a name for your cocktail (Ex: Spritz)</string>
    <string name="txt_add_image">Add an image</string>
</resources>