<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.authentication.SignInActivity"
    android:background="@drawable/gradient_background">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/form_email_password"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/formLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:adjustViewBounds="true"
                android:maxWidth="60dp"
                android:maxHeight="60dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/action_txt_login"
                style="@style/ThemeOverlay.MyTitleText"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/rounded_whiterounded_white"
                    android:drawableLeft="@drawable/baseline_email_black_24"
                    android:drawablePadding="5dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/rounded_whiterounded_white"
                    android:drawableStart="@drawable/baseline_vpn_key_black_24"
                    android:drawableLeft="@drawable/baseline_vpn_key_black_24"
                    android:drawablePadding="5dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:textSize="14sp" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/forgot_password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="right"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/action_forgot_password"
                android:textColor="@color/gray_xx_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">
                <Button
                    android:id="@+id/sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:padding="5dp"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:background="#26FFFFFF"
                    android:text="@string/action_txt_login"
                    android:textColor="#BFFFFFFF"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/back_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:layout_height="35dp"
                    android:padding="5dp"
                    android:background="#26FFFFFF"
                    android:text="@string/txt_back"
                    android:textColor="#BFFFFFFF"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_asking_account"
                    android:gravity="center"
                    android:background="@color/transparent"
                    android:textColor="@color/blue_light"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
</ScrollView>