<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="match_parent"
    android:background="@color/thirdColor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_tittle"
        android:text="@string/txt_title"
        android:maxLines="1"
        android:ellipsize="end"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceSearchResultTitle"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_description"
        android:layout_below="@+id/product_tittle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@drawable/ic_bookmark_border_pink_600_36dp"
        android:text="@string/txt_description"
        android:maxLines="3"
        android:ellipsize="end"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_toLeftOf="@+id/product_photo"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_tutorial"
        android:layout_below="@+id/product_description"
        android:drawableLeft="@drawable/ic_library_books_pink_600_36dp"
        android:text="@string/txt_tutorial"
        android:maxLines="3"
        android:ellipsize="end"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_toLeftOf="@+id/product_photo"
        />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/no_image"
        android:id="@+id/product_photo"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/product_tittle"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <LinearLayout
        android:id="@+id/dyn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/product_photo"
        android:gravity="center"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_alarm_add_cyan_700_24dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_border_red_a700_24dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_highlight_off_green_600_24dp"
            />

    </LinearLayout>

</RelativeLayout>